--- a/business-core/pom.xml
+++ b/business-core/pom.xml
@@ -3,10 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>4.0.1</version>
-		<relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.nexusflow</groupId>
+        <artifactId>nexusflow-ecosystem</artifactId>
+        <version>1.0.0</version>
+        <relativePath>../pom.xml</relativePath> 
 	</parent>
 	<groupId>com.nexusflow</groupId>
 	<artifactId>business-core</artifactId>
