--- a/auth-service/src/main/resources/application.yml
+++ b/auth-service/src/main/resources/application.yml
@@ -3,9 +3,9 @@ spring:
     name: auth-service
 
   datasource:
-    url: ${BD_URL}
-    username: ${DB_USERNAME}
-    password: ${DB_PASSWORD}
+    url: ${BD_URL:jdbc:postgresql://localhost:5433/nexusflow_auth}
+    username: ${DB_USERNAME:postgres}
+    password: ${DB_PASSWORD:1234}
     driver-class-name: org.postgresql.Driver
 
   jpa:
@@ -16,3 +16,6 @@ spring:
       hibernate:
         format_sql: true
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+server:
+    port: 8081
