--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,27 @@ services:
     depends_on:
       - nexusflow-db
 
+  kafka:
+      image: apache/kafka:latest
+      container_name: nexusflow-kafka
+      ports:
+        - "9092:9092"
+      environment:
+        # Configurações KRaft para imagem Apache
+        - KAFKA_NODE_ID=1
+        - KAFKA_PROCESS_ROLES=broker,controller
+        - KAFKA_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+        - KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092
+        - KAFKA_CONTROLLER_LISTENER_NAMES=CONTROLLER
+        - KAFKA_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+        - KAFKA_CONTROLLER_QUORUM_VOTERS=1@localhost:9093
+        - KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR=1
+        - KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
+        - KAFKA_TRANSACTION_STATE_LOG_MIN_ISR=1
+        - KAFKA_GROUP_INITIAL_REBALANCE_DELAY_MS=0
+      networks:
+        - nexus-network
+
 networks:
   nexus-network:
     driver: bridge
